// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeatChart Component check loading 1`] = `
<div>
  <div
    class="heatChart"
  >
    <div
      class="loading"
    >
      <div
        class="spinner-border text-success"
      />
    </div>
  </div>
</div>
`;

exports[`HeatChart Component error task 1`] = `
<div>
  <div
    class="heatChart"
  >
    <div
      class="error"
    >
      Error
      <img
        alt="not-found"
        height="100px"
        src="https://www.pngitem.com/pimgs/m/561-5616833_image-not-found-png-not-found-404-png.png"
        width="100px"
      />
    </div>
  </div>
</div>
`;

exports[`HeatChart Component success task 1`] = `
<div>
  <div
    class="heatChart"
  >
    <div
      class="row"
    >
      <div
        class="col-md-9 col-sm-12"
      >
        <div
          class="heatChart-container padding-title"
        >
          <h5
            class=""
          >
            Device By Hour
          </h5>
          <div
            class="heatChart-container-detail"
          >
            <chart
              height="240"
              options="[object Object]"
              series="[object Object],[object Object],[object Object]"
              type="heatmap"
            />
          </div>
          <div
            class="d-flex justify-content-between heatChart-container-time"
          >
            <span>
              am
            </span>
            <span>
              pm
            </span>
          </div>
          <div
            class="heatChart-container-line"
          />
          <div
            class="d-flex justify-content-between heatChart-container-number"
          >
            <span>
              0
            </span>
            <span>
              5
            </span>
            <span>
              10
            </span>
            <span>
              15
            </span>
          </div>
        </div>
      </div>
      <div
        class="col-md-3 col-sm-12"
      >
        <div
          class="barChart"
        >
          <chart
            height="230"
            options="[object Object]"
            series="[object Object]"
            type="bar"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
